<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="181dp"
            android:layout_height="189dp"
            android:paddingBottom="10dp"
            android:src="@drawable/boost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lastname"

            style="@style/EditText"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />



        <EditText
            android:id="@+id/name"

            style="@style/EditText"
            android:textColor="@color/black"

            android:hint="@string/firstname"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/lastname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/height"
            style="@style/EditText"
            android:textColor="@color/black"

            android:hint="@string/heightHint"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/weigth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastname" />

        <EditText
            android:id="@+id/weigth"
            style="@style/EditText"
            android:textColor="@color/black"
            android:hint="@string/weightHint"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height" />

        <EditText
            android:id="@+id/age"
            style="@style/EditText"
android:textColor="@color/black"
            android:hint="@string/AgeHint"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weigth" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"

            android:layout_height="50dp"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginRight="17dp"
            android:max="80"
            android:min="10"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="93dp"
            android:background="@drawable/gradient_background"
            android:text="@string/Submit"
            app:backgroundTint="@android:color/holo_blue_bright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
